--- a/views/home.jade
+++ b/views/home.jade
@@ -5,7 +5,7 @@ html
   body
     div.container
       div.jumbotron
-        h1 Yoh Pluralsighters!!!
+        h1 Yoh Pluralsighters!!! Build is fixed...
         p Click the button below to head over to my podcast...
         p 
           a.btn.btn-primary(href="http://intechwetrustpodcast.com") Podcast
